--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'my_personal_project'
 version: '1.0.0'
 config-version: 2
 
@@ -36,7 +36,14 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
-    # Applies to all files under models/example/
-    example:
+  my_personal_project:
+
+    # Applies to all files under models/staging/
+    staging:
       +materialized: table
+
+      ca_schools_dash:
+        
+        # Applies to files under models/staging/ca_schools_dash/base/
+        base:
+         +materialized: ephemeral
